--- a/src/Iis.Domain/Iis.Domain.csproj
+++ b/src/Iis.Domain/Iis.Domain.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Elastic\" />
     <Folder Include="MaterialsDistribution\" />
   </ItemGroup>
 
