--- a/src/Iis.MaterialDistributor/Iis.MaterialDistributor.csproj
+++ b/src/Iis.MaterialDistributor/Iis.MaterialDistributor.csproj
@@ -36,8 +36,10 @@
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Iis.Elastic\Iis.Elastic.csproj" />
+        <ProjectReference Include="..\Iis.Interfaces\Iis.Interfaces.csproj" />
         <ProjectReference Include="..\Iis.MaterialDistributor.DataModel\Iis.MaterialDistributor.DataModel.csproj" />
         <ProjectReference Include="..\Iis.Messages\Iis.Messages.csproj" />
+        <ProjectReference Include="..\Iis.Security\Iis.Security.csproj" />
         <ProjectReference Include="..\Iis.Utility\Iis.Utility.csproj" />
         <ProjectReference Include="..\Iis.RabbitMq\Iis.RabbitMq.csproj" />
     </ItemGroup>
